--- a/client/config.json
+++ b/client/config.json
@@ -1,4 +1,4 @@
 {
     "baseUrl": "",
-    "socketUrl": "ws://ec2-54-253-74-168.ap-southeast-2.compute.amazonaws.com:8000"
+    "socketUrl": "http://ec2-54-253-74-168.ap-southeast-2.compute.amazonaws.com:8000"
 }
